# python-task

./: Dockerfile  app.py  compose.yaml  init.sql  pyproject.toml  requirements.txt
database/: database.py  postgres.py
managers/: resources.py
utils/: readers.py  writers.py
