[project]
name = "python-task1"
version = "0.1.0"
description = "Solution to the Python Task 1."
authors = [{name = "Kamil", email = "aaaa@aaaa.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg (>=3.3.2,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "dicttoxml (>=1.7.16,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
